# remote-joy

./: CMakeLists.txt  LICENSE  README.md
protobuf/: joystick-data.proto
protobuf/python/: joystick_data_pb2.py
remote-joy-exec/include/: joystick-consumer.h  joystick_data.h  sdl-manager.h  udp-connector.h  udp-sender.h
remote-joy-exec/src/: joystick-consumer.cpp  joystick_data.cpp  joystick_data.h  main.cpp  sdl-manager.cpp  udp-connector.cpp  udp-sender.cpp
